<resources>
    <string name="action_settings">Settings</string>
    <string name="merchant_terms_url">www.mickleentity.com/bonappetit/merchant/termsandconditions/</string>
    <string name="menu_Customer">Customer</string>
    <string name="menu_Merchant">Merchant</string>
    <string name="menu_admin">Admin</string>
    <string name="open">open</string>
    <string name="description">Description</string>
    <string name="close">close</string>
    <string name="currentPassword">Current password</string>
    <string name="NewPassword">New password</string>
    <string name="go">go</string>
    <string name="print">Print</string>
    <string name="refresh">Refresh</string>
    <string name="contact2">Contact</string>
    <string name="prepare">Prepare</string>
    <string name="zeroDayMoneyBack">0 Day</string>
    <string name="moneyBack">Money Back Guarantee (In Days)</string>
    <string name="ship">Ship</string>
    <string name="day">Day</string>
    <string name="deliver">Deliver</string>
    <string name="canceled"><b><i>CANCELED</i></b></string>
    <string name="un_append">Un Append</string>
    <string name="append_user">Append User</string>
    <string name="registered_email">User registered Email</string>
    <string name="append_users">Append Users</string>
    <string name="orderFulfilledBy">Order Fulfilled By</string>
    <string name="update">Update</string>
    <string name="currency_usd">USD</string>
    <string name="message">Write your message here.</string>
    <string name="send">Send</string>
    <string name="subject">Subject</string>
    <string name="full_name">Full name</string>
    <string name="add_new_food_item">Add New Food Item</string>
    <string name="food_item_image">Food Item Image</string>
    <!-- Strings for Merchant -->
    <string name="dashboard">Dashboard</string>
    <string name="my_restaurant">My Restaurant</string>
    <string name="my_food_items">My Food Items</string>
    <string name="new_orders">New Order(s)</string>
    <string name="un_shipped_orders">Un-shipped Order(s)</string>
    <string name="merchant_terms_and_conditions"><u>I <b>agree</b> to <b><i>Terms and Conditions</i></b>.</u></string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="previous">Previous</string>
    <string name="app_Title">Bon Appétit</string>
    <string name="app_Version">Version 1.0</string>
    <string name="app_FeedBack"><u>Send us a feedback</u></string>
    <string name="app_Rating"><u>Rate us on Google Play Store</u></string>
    <string name="app_Copyright">© 2021 MICKLE ENTITY LTD</string>
    <string name="sell">Sell on Bon Appétit</string>
    <string name="home_slogan">Order your favorite food; And Pay only when the food is delivered.</string>
    <string name="img_desc">Special Meal</string>
    <string name="btnText">Add to Cart</string>
    <string name="foodDesc">Italian Pancake with tomatoes source</string>
    <string name="Price">$0.00</string>
    <string name="Cart">0</string>
    <string name="guest">Welcome Guest!</string>
    <string name="about">About</string>
    <string name="changePassword">Change password</string>
    <string name="profile">Profile</string>
    <string name="default_location">not set..</string>
    <string name="btnUpdate">Update</string>
    <string name="cart_total">Cart Total: $0.00</string>
    <string name="btnCheckOutText">Check Out</string>
    <string name="menu_home">Home</string>
    <string name="menu_buy">Order food</string>
    <string name="menu_my_orders">My orders</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_logout"><u><i>Logout</i></u></string>
    <string name="menu_login"><u><i>Login</i></u></string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="Register"><u>Register</u></string>
    <string name="forgotPassword"><u>Forgot password</u></string>
    <string name="changeLocation"><u>Location</u></string>
    <string name="login"><u><i>Login</i></u></string>
    <string name="IDD">IDD</string>
    <string name="SearchHint">e.g Pizza</string>
    <string name="zip_code">Zip Code</string>
    <string name="search">Search</string>
    <string name="sign_up"><u>Sign Up</u></string>
    <string name="confirm_password">Confirm password</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="enter_your_e_mail_address">Enter your E-mail address</string>
    <string name="first_name">First name</string>
    <string name="new_registration">New Registrations</string>
    <string name="middle_name">Middle name</string>
    <string name="last_name">Last name</string>
    <string name="submit">Submit</string>
    <string name="customer_feedback">Customer Feedback</string>
    <string name="on_map">Your Establishment must be on <b>Google Map</b> for this registration to be <b>approved.</b></string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="agreement">I agree</string>
    <string name="new_location">New Location</string>
    <string name="current_location">Current Location:</string>
    <string name="resetpwd">Reset Password</string>
    <string name="state_resgion">State / Region</string>
    <string name="country">Country</string>
    <string name="mobile_phone_number">Mobile number, exclude leading zero</string>
    <string name="sign_in">Sign In</string>
    <string name="contact">Contact Person</string>
    <string name="contactPhone">Mobile Phone Number</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="payment_address">Billing Address</string>
    <string name="place_order">Place Order</string>
    <string name="add">Add</string>
    <string name="restaurantPicture">Restaurant Picture</string>
    <string name="approve">Approve</string>
    <string name="suspend">Suspend</string>
    <string name="Terms_and_Condition">By selecting the switch below and placing this Order you agree to the terms and condition of the SELLER in addition to the term of paying for this order in full at the point of delivery.</string>
    <string name="new_shipping_address">New Shipping Address</string>
    <string name="save">Save</string>
    <string name="CustomerOder">Customer Order</string>
    <string name="orderReceived">Received</string>
    <string name="underPreparation">Prepared</string>
    <string name="shipped">Shipped</string>
    <string name="delivered">Delivered</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="email_merchant">Email Merchant</string>
    <string name="phone_merchant">Call Merchant</string>
    <string name="quantity">Quantity:</string>
    <string name="Qty">Qty</string>
    <string name="ZeroValue">0</string>
    <string name="ZeroAmount">$0,0</string>
    <string name="price">Price:</string>
    <string name="price2">Price (+ Shipping)</string>
    <string name="shippingIncluded"><i>Shipping Included.</i></string>
    <string name="total">Total:</string>
    <string name="continue_shopping">Continue Shopping</string>
    <string name="title_activity_folder">folder</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="short_date">20-MAR-2029</string>
    <string name="resolved">Resolved</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="thank_you">Thank you for signing up as a <b>Merchant</b> on <i><b><u>Bon Appétit</u></b></i>; One of our agents will contact you to inform you of the next step.
        in the meantime feel free to contact us if you need further explanation as regards to anything through any of the channels as described in About.</string>
    <string name="desc">Describe your Restaurant to customers.</string>
    <string name="website">Your website e.g yourrestaurant.com</string>
    <string name="resturantImage">Restaurant Image</string>
    <string name="restaurantName">Restaurant Name</string>
    <string name="zipCodes">ZipCodes separated by spaces. e.g 10001 10003 10004 etc.</string>
    <string name="phone">Phone number</string>
    <string name="zipCode_Note"><u><b>Attention! </b></u>
    On the next input field add all the <b>ZipCodes</b> your delivery personnel can deliver <b>food</b> to <b><u>customers. </u></b>
        For example: If your <b>Restaurant</b> is located within <b>New York City</b> and your delivery team can deliver food to customers in every part of the city, then you might want to include in the field provided
        all the ZipCodes in New York City separated by spaces. e.g 10001 10003 10004 10005 10006 etc.
    </string>
    <string name="add_image"><u>Add Image for this Restaurant</u></string>
    <string name="pic_size"><u>Note that maximum picture size allowed is 1MB (1 mega byte).</u></string>
    <string name="login_logout">Login / Logout</string>
    <string name="what_would_you_like_to_eat">What would you like to eat!</string>
    <array name="ResturantTypes">
        <item>Fast food</item>
        <item>Fast Casual</item>
        <item>Buffet</item>
        <item>Cafe</item>
        <item>Fast Casual</item>
        <item>Family Style</item>
        <item>Casual Dining</item>
        <item>Contemporary Casual</item>
        <item>Fine Dining</item>
        <item>Pop-Up Restaurant</item>
        <item>Food Truck</item>
        <item>Concession Stand</item>
        <item>Virtual Restaurant</item>
    </array>
    <array name="FeedBackTypes">
        <item>General Feedback</item>
        <item>Bug Report</item>
        <item>Suggestion</item>
        <item>Other</item>
    </array>
    <string name="location">Location</string>
    <string name="scanQRCode">Ship Item (Scan QR Code)</string>
    <string name="scanQRCodeForDelivery">Deliver Item (Scan QR Code)</string>
    <string name="collect_payment">Collect Payment</string>
    <string name="pay">Pay</string>
    <string name="qr_code">QR Code</string>
    <string name="scan_mickle_pay_qr_code">Scan MICKLE-PAY QR Code</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_splash_screen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="item_image">Item Image</string>
    <string name="locate_customer">Locate Customer</string>
    <string name="print_order">Print Order</string>
    <string name="call_customer">Call Customer</string>
    <string name="deliver_order">Deliver Order</string>
    <string name="date">Date</string>
    <string name="sub_total">Sub Total:</string>
    <string name="_1_markup">1% Markup:</string>
    <string name="total_due">Total Due:</string>
    <string name="manager_sign">Manager Sign</string>
    <string name="company_name">Company Name</string>
    <string name="customer_sign">Customer Sign</string>
    <string name="mickle_pay_url">www.mickle-pay.com</string>
    <string name="mickle_pay_settings">MICKLE-PAY Settings</string>
    <string name="mickle_pay_wallet_id">MICKLE-PAY WALLET ID</string>
    <string name="mickle_pay_wallet_notice">MICKLE-PAY WALLET ID required during payment. Get one <u><b><i>here</i></b></u> if you havent.</string>
    <string name="mickle_pay_wallet_note"><i>Please note that you must register with MICKLE-PAY and enter your WALLET ID in the field provided above. Your WALLET ID is required for customers to successfully make payments to you when they buy any of your product. Download the <b>MICKLE-PAY APP</b> or visit <u>www.mickle-pay.com</u> to begin.</i></string>

</resources>